@@ -18,6 +18,7 @@
 * Fixed a bug in the 'recruits' command (Issue 77)
 * Fixed a bug in the 'whois' command
 * Added a Lockdown plugin (requires ops in a clan channel to function)
+* Modified the ChatQueue to use priority
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
